created inmutable lists for services like sonarqube advice.